Fix horizontal scrolling due to Google +1 button in Firefox.

--- a/styles/site/site-content.less
+++ b/styles/site/site-content.less
@@ -18,3 +18,6 @@
     font-size: 12px;
     text-decoration: none !important;
 }
+iframe[id^="oauth2relay"]{
+  position: fixed !important;
+}
